qmsystem2 (1.0.5) unstable; urgency=low

   [Matias Muhonen]
   * Fixes: NB#218465 - Activate offline mode shown in offline mode
   * Fixes: NB#218788 - QmKeys does not inform clients about power key presses

 -- Matias Muhonen <ext-matias.muhonen@nokia.com> Thu, 13 Jan 2011 13:51:40 +0200

qmsystem2 (1.0.4) unstable; urgency=low

   [Antti Virtanen]
   * Compatible with sensord-0.6.33.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Wed, 29 Dec 2010 14:44:18 +0200

qmsystem2 (1.0.3) unstable; urgency=low

   [Matias Muhonen]
   * Added QmSystemInformation
   * Fixes: NB#211690 - Circular dependency between qmsystem2, devicelock and qt-mobility
   * Use timed's package config file for linking to libtimed

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 29 Dec 2010 11:17:08 +0200

qmsystem2 (1.0.2) unstable; urgency=low

   [Matias Muhonen]
   * Optimize QmIPCInterface::callAsynchronously() performance
   * Fixes: NB#214676 - QmSystem does not expose the possibility to make any async calls for blocking functionality

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 27 Dec 2010 12:10:16 +0200

qmsystem2 (1.0.1) unstable; urgency=low

   [Matias Muhonen]
   * Fix warnings from the static analysis tool
   * Optimize QmIPCInterface performance by using QDBusAbstractInterface instead of QDBusInterface
   * Fixes: NB#214660 - QmSystem uses QDBusInterface, potentially causing serious performance issues.

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 23 Dec 2010 12:23:17 +0200

qmsystem2 (1.0.0) unstable; urgency=low

   [Matias Muhonen]
   * Fix missing return in QmKeysPrivate::getKeyState

   [Tapio Rantala]
   * Releasing for MeeGo

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 20 Dec 2010 09:42:40 +0200

qmsystem2 (0.0.11) unstable; urgency=low

   [Matias Muhonen]
   * Made devicelock dependency optional
   * Made usb-moded-dev dependency optional
   * Made sysinfo dependency optional
   * Use pkgconfig with qmake