@@ -28,6 +28,12 @@
     <for path="/usr/bin/displaystate-test" id="displaystate-test" />
   </request>
   <request>
+    <credential name="devicelock::DeviceLockControl" />
+    <credential name="devicelock::State_Locked" />
+    <credential name="devicelock::State_Unlocked" />
+    <for path="/usr/bin/manual-locks-test" id="manual-locks-test" />
+  </request>
+  <request>
     <credential name="dsme::DeviceStateControl" />
     <for path="/usr/bin/system-test" id="system-test" />
   </request>
