@@ -56,7 +56,7 @@ public:
     /** Things that can be locked. */
     enum Lock
     {
-        Device = 0,       /**< Device lock. Note: this is deprecated and not supported. Please use the DeviceLock interface. */
+        Device = 0,       /**< Device lock */
         TouchAndKeyboard  /**< Touchscreen/keypad lock */
     };
 
