@@ -1,0 +1,7 @@
+QT += dbus
+QT -=gui
+
+TARGET = manual-locks-test
+SOURCES += manual_locks.cpp
+
+include(../common-install.pri)
