@@ -207,6 +207,9 @@
       <case name="manual-bgcalibration" level="Component" type="Functional" manual="true" description="QmMagnetometer" subfeature="Magnetometer in SensorFW" requirement="39960">
         <step expected_result="0">/usr/bin/manual-bgcalibration-test </step>
       </case>
+      <case name="manual-locks" level="Component" type="Functional" manual="true" description="devicelock" subfeature="QT_APIs" requirement="39927">
+        <step expected_result="0">/usr/bin/manual-locks-test </step>
+      </case>
       <case name="manual-usbmode" level="Component" type="Functional" manual="true" description="usbmode" subfeature="QT_APIs" requirement="39927">
         <step expected_result="0">/usr/bin/manual-usbmode-test </step>
       </case>
